--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Ionic4 Start Theme</title>
+    <title>Disco Cell</title>
 
     <base href="/" />
 
@@ -22,6 +22,5 @@
   </head>
   <body>
     <app-root></app-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
